@@ -178,6 +178,7 @@ void gcmd_tags_exiv2_init()
                     {TAG_EXIF_GPSLONGITUDE, "Exif.GPSInfo.GPSLongitude"},
                     {TAG_EXIF_GPSLONGITUDEREF, "Exif.GPSInfo.GPSLongitudeRef"},
                     {TAG_EXIF_GPSVERSIONID, "Exif.GPSInfo.GPSVersionID"},
+                    {TAG_EXIF_IMAGEDESCRIPTION, "Exif.Image.ImageDescription"},
                     {TAG_EXIF_IMAGELENGTH, "Exif.Image.ImageLength"},
                     {TAG_EXIF_IMAGERESOURCES, "Exif.Image.ImageResources"},
                     {TAG_EXIF_IMAGEUNIQUEID, "Exif.Photo.ImageUniqueID"},
@@ -248,12 +249,9 @@ void gcmd_tags_exiv2_init()
                     {TAG_EXIF_YCBCRPOSITIONING, "Exif.Image.YCbCrPositioning"},
                     {TAG_EXIF_YCBCRSUBSAMPLING, "Exif.Image.YCbCrSubSampling"},
                     {TAG_EXIF_YRESOLUTION, "Exif.Image.YResolution"},
-                    {TAG_IMAGE_MAKE, "Exif.Image.Make"},
-                    {TAG_IMAGE_MODEL, "Exif.Image.Model"},
                     {TAG_IMAGE_COMMENTS, "Exif.Image.XPComment"},
                     {TAG_IMAGE_COMMENTS, "Exif.Photo.UserComment"},
                     {TAG_IMAGE_CREATOR, "Exif.Image.XPAuthor"},
-                    {TAG_EXIF_IMAGEDESCRIPTION, "Exif.Image.ImageDescription"},
                     {TAG_IMAGE_EXPOSUREPROGRAM, "Exif.CanonCs.ExposureProgram"},
                     {TAG_IMAGE_EXPOSUREPROGRAM, "Exif.Photo.ExposureProgram"},
                     {TAG_IMAGE_EXPOSURETIME, "Exif.MinoltaCs5D.ExposureTime"},
@@ -283,11 +281,13 @@ void gcmd_tags_exiv2_init()
                     {TAG_IMAGE_ISOSPEED, "Exif.Olympus.ISOSpeed"},
                     {TAG_IMAGE_KEYWORDS, "Exif.Image.XPKeywords"},
                     {TAG_IMAGE_KEYWORDS, "Iptc.Application2.Keywords"},
+                    {TAG_IMAGE_MAKE, "Exif.Image.Make"},
                     {TAG_IMAGE_METERINGMODE, "Exif.CanonCs.MeteringMode"},
                     {TAG_IMAGE_METERINGMODE, "Exif.MinoltaCs5D.MeteringMode"},
                     {TAG_IMAGE_METERINGMODE, "Exif.MinoltaCsNew.MeteringMode"},
                     {TAG_IMAGE_METERINGMODE, "Exif.Photo.MeteringMode"},
                     {TAG_IMAGE_METERINGMODE, "Exif.Sigma.MeteringMode"},
+                    {TAG_IMAGE_MODEL, "Exif.Image.Model"},
                     {TAG_IMAGE_ORIENTATION, "Exif.Image.Orientation"},
                     {TAG_IMAGE_ORIENTATION, "Iptc.Application2.ImageOrientation"},
                     {TAG_IMAGE_SOFTWARE, "Exif.Image.Software"},
